--- a/teach_assist/.gitignore
+++ b/teach_assist/.gitignore
@@ -41,3 +41,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+ 
+# add by project setup script -NirajKC 
+*.env 
+ 
+# add by project setup script -NirajKC 
+*.env 
