--- a/teach_assist/pubspec.yaml
+++ b/teach_assist/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  http: 1.2.1
+  flutter_dotenv: 5.1.0
+  firebase_core:
 
 dev_dependencies:
   flutter_test:
@@ -88,3 +91,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets: 
+    - assets/ 
+    - .env
+
