--- a/teach_assist/pubspec.yaml
+++ b/teach_assist/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage:
   firebase_database: ^10.4.7
   uuid: ^4.3.3
+  introduction_screen: ^3.1.14
 
 
 dev_dependencies:
