--- a/teach_assist/pubspec.yaml
+++ b/teach_assist/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   firebase_database: ^10.4.7
   uuid: ^4.3.3
   introduction_screen: ^3.1.14
-
+  fluttertoast:
 
 dev_dependencies:
   flutter_test:
