course tabs added

--- a/teach_assist/pubspec.yaml
+++ b/teach_assist/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   uuid: ^4.3.3
   introduction_screen: ^3.1.14
   fluttertoast:
+  url_launcher: ^6.3.0
 
   geolocator:
   geofence_service:
