null check error solved

--- a/teach_assist/pubspec.yaml
+++ b/teach_assist/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   geolocator:
   geofence_service:
   timer_builder:
+  permission_handler:
+  provider:
 
 dev_dependencies:
   flutter_test:
