--- a/teach_assist/pubspec.yaml
+++ b/teach_assist/pubspec.yaml
@@ -53,10 +53,20 @@ dependencies:
   permission_handler:
   provider:
   intl: ^0.19.0
+  flutter_notification_channel: ^3.1.0
+  image_picker: ^1.1.2
+
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.14.1
   flutter_test:
     sdk: flutter
+#
+#flutter_launcher_icons:
+#  android: "launcher_icon"
+#  ios: true
+#  image_path: "assets/images/chat.png"
+#  min_sdk_android: 21 # android min sdk min:16, default 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
