video summary module done

--- a/teach_assist/pubspec.yaml
+++ b/teach_assist/pubspec.yaml
@@ -55,7 +55,8 @@ dependencies:
   intl: ^0.19.0
   flutter_notification_channel: ^3.1.0
   image_picker: ^1.1.2
-  file_picker: ^8.0.7
+  file_picker:
+  path_provider:
 
 
 dev_dependencies:
